--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Earthquake activity</title>
+  <title>Geo JSON</title>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -31,3 +31,4 @@
 </body>
 
 </html>
+
